# fastapi_zero

./: .gitignore  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py
fastapi_zero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastapi_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 7c56d022620d_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
